--- a/club/pom.xml
+++ b/club/pom.xml
@@ -11,4 +11,11 @@
         <maven.compiler.target>22</maven.compiler.target>
         <exec.mainClass>app.Club</exec.mainClass>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.28</version> 
+        </dependency>
+    </dependencies>
 </project>
